--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
          color: var(--tg-theme-button-text-color);
          border: none;
          font-size: 18px;
+         font-weight: 500;
+         transition: all 500ms ease;
       }
 
-      .button:not(:last-child){
-         margin-bottom: 20px
+      .button:hover{
+         background: var(--tg-theme-secondary-bg-color);
       }
 
       #usercard{
