--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 "last name":last_name,
                 "email":email,
             }
+            tg.sendData(JSON.stringify(data))
 
         })
     </script>
