--- a/index.html
+++ b/index.html
@@ -5,39 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main page</title>
     <style>
-         body{
-         color: var(--tg-theme-text-color);
-         background: var(--tg-theme-bg-color);
-         display: flex;
-         flex-direction: column;
-         align-items: center;
-         font-size: 18px;
-      }
+        body {
+            color: var(--tg-theme-text-color);
+            background: var(--tg-theme-bg-color);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-size: 18px;
+            margin: 0; /* Remove default margin */
+            height: 100vh; /* Make the body take the full height of the viewport */
+            justify-content: center; /* Center content vertically */
+        }
 
-      .hint{
-         color: var(--tg-theme-hint-color);
-      }
+        form {
+            max-width: 400px; /* Set a maximum width for the form */
+            width: 100%; /* Take up the full width of its container */
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
+            border-radius: 8px; /* Add rounded corners */
+        }
 
-      .link{
-         color: var(--tg-theme-link-color);
-      }
+        h1 {
+            margin-bottom: 20px; /* Add spacing below the heading */
+            color: var(--tg-theme-primary-color); /* Adjust heading color */
+        }
 
-      .button{
-         background: var(--tg-theme-button-color);
-         color: var(--tg-theme-button-text-color);
-         border: none;
-         font-size: 18px;
-         font-weight: 500;
-         transition: all 500ms ease;
-      }
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 15px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+        }
 
-      .button:hover{
-         background: var(--tg-theme-secondary-bg-color);
-      }
+        button {
+            width: 100%;
+            padding: 10px;
+            background: var(--tg-theme-button-color);
+            color: var(--tg-theme-button-text-color);
+            border: none;
+            font-size: 18px;
+            font-weight: 500;
+            transition: all 500ms ease;
+            cursor: pointer;
+        }
 
-      #usercard{
-         text-align: center;
-      }
+        button:hover {
+            background: var(--tg-theme-secondary-bg-color);
+        }
     </style>
 </head>
 <body>
@@ -59,19 +76,54 @@
         let reg = document.getElementById("register");
         tg.expand();
 
-        reg.addEventListener("click", () =>{
-            let name = document.getElementById("name").value;
-            let last_name = document.getElementById("lastname").value;
-            let email = document.getElementById("email").value;
+        reg.addEventListener("click", () => {
+            // Get input values
+            let name = document.getElementById("name").value.trim();
+            let last_name = document.getElementById("lastname").value.trim();
+            let email = document.getElementById("email").value.trim();
+            let tel = document.getElementById("tel").value.trim();
 
-            let data = {
-                "name":name,
-                "last name":last_name,
-                "email":email,
+            // Basic checks
+            if (!name) {
+                alert("Please enter a valid name.");
+                return;
             }
-            tg.sendData(JSON.stringify(data))
 
-        })
+            if (!last_name) {
+                alert("Please enter a valid last name.");
+                return;
+            }
+
+            if (!validateEmail(email)) {
+                alert("Please enter a valid email address.");
+                return;
+            }
+
+            if (!validateTel(tel)) {
+                alert("Please enter a valid telephone number.");
+                return;
+            }
+
+            // If all checks pass, send data
+            let data = {
+                "name": name,
+                "last name": last_name,
+                "email": email,
+                "tel": tel,
+            }
+            tg.sendData(JSON.stringify(data));
+        });
+
+        // Function to validate email address
+        function validateEmail(email) {
+            // You can use a more sophisticated email validation regex if needed
+            return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+        }
+
+        // Function to validate telephone number (basic check for +380___)
+        function validateTel(tel) {
+            return /^(\+380\d{7})$/.test(tel);
+        }
     </script>
 
 </body>
