--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 "tel": tel,
             }
             tg.sendData(JSON.stringify(data));
-            window.location.href = "home.html"
+            window.location.hash = "#home"
         });
 
         // Function to validate email address
