--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h1>Dentist Event</h1>
     <form>
         <!-- ADD "REQUIRED TO EVERY FIELD" -->
-        <input type="text" id="name" placeholder="Name" > 
+        <input type="text" id="name" placeholder="Name" required> 
         <input type="text" id="lastname" placeholder="Last Name" >
         <input type="text" id="email" placeholder="e-mail@gmail.com" >
         <input type="text" id="tel" placeholder="Tel no (+380_____)" >
