--- a/index.html
+++ b/index.html
@@ -112,11 +112,9 @@
                 "email": email,
                 "tel": tel,
             }
-            tg.sendData(JSON.stringify(data), () => {
-            // Callback function: Navigate after sending data
-            tg.navigate("home.html");
+            // tg.sendData(JSON.stringify(data));
+            // window.location.href = "home.html";
         });
-    });
 
         // Function to validate email address
         function validateEmail(email) {
