--- a/home.html
+++ b/home.html
@@ -11,7 +11,13 @@
         <img src="images/huyatina.jpg" alt="Huyatina Image">
     </div>
     <h1>Home Page</h1>
-    <p>Idi Nahui</p>
+    <button id="register">Register</button>
+    <button id="register">Register</button>
+    <button id="register">Register</button>
+    <button id="register">Register</button>
+    <button id="register">Register</button>
+    <button id="register">Register</button>
+    <button id="register">Register</button>
     
 </body>
 </html>
