--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 "tel": tel,
             }
             // tg.sendData(JSON.stringify(data));
-            window.location.href = "home.html";
+            tg.navigate("home.html");
         });
 
         // Function to validate email address
