--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
     <h1>Dentist Event</h1>
     <form>
         <!-- ADD "REQUIRED TO EVERY FIELD" -->
-        <!-- <input type="text" id="name" placeholder="Name" required> 
+        <input type="text" id="name" placeholder="Name" required> 
         <input type="text" id="lastname" placeholder="Last Name" >
         <input type="text" id="email" placeholder="e-mail@gmail.com" >
         <input type="text" id="tel" placeholder="Tel no (+380_____)" >
         <input type="text" id="city" placeholder="City" >
         <input type="text" id="school" placeholder="school" >
-        <input type="text" id="position" placeholder="position"> -->
+        <input type="text" id="position" placeholder="position">
         <button id="register">Register</button>
     </form>
     
