--- a/index.html
+++ b/index.html
@@ -4,60 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main page</title>
-    <style>
-        body {
-            color: var(--tg-theme-text-color);
-            background: var(--tg-theme-bg-color);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            font-size: 18px;
-            margin: 0; /* Remove default margin */
-            height: 100vh; /* Make the body take the full height of the viewport */
-            justify-content: center; /* Center content vertically */
-        }
-
-        form {
-            max-width: 400px; /* Set a maximum width for the form */
-            width: 100%; /* Take up the full width of its container */
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle box shadow */
-            border-radius: 8px; /* Add rounded corners */
-        }
-
-        h1 {
-            margin-bottom: 20px; /* Add spacing below the heading */
-            color: var(--tg-theme-primary-color); /* Adjust heading color */
-        }
-
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 16px;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            background: var(--tg-theme-button-color);
-            color: var(--tg-theme-button-text-color);
-            border: none;
-            font-size: 18px;
-            font-weight: 500;
-            transition: all 500ms ease;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background: var(--tg-theme-secondary-bg-color);
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="image-frame">
+        <img src="images/huyatina.jpg" alt="Huyatina Image">
+    </div>
     <h1>Dentist Event</h1>
     <form>
         <!-- ADD "REQUIRED TO EVERY FIELD" -->
