--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             tg.sendMessage(message);
     
             // Navigate to home.html
-            tg.navigate("home.html");
+            window.location.href = "home.html";
         });
     </script>
 
