--- a/home.html
+++ b/home.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="image-frame">
-        <img src="images/huyatina.jpg" alt="Huyatina Image">
+    <div id="home">
+        <div class="image-frame">
+            <img src="images/huyatina.jpg" alt="Huyatina Image">
+        </div>
+        <h1>Home Page</h1>
+        <button id="register">Register</button>
+        <button id="register">Register</button>
+        <button id="register">Register</button>
+        <button id="register">Register</button>
+        <button id="register">Register</button>
+        <button id="register">Register</button>
+        <button id="register">Register</button>
     </div>
-    <h1>Home Page</h1>
-    <button id="register">Register</button>
-    <button id="register">Register</button>
-    <button id="register">Register</button>
-    <button id="register">Register</button>
-    <button id="register">Register</button>
-    <button id="register">Register</button>
-    <button id="register">Register</button>
-    
 </body>
 </html>
