--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="images/fhfhfh.jpeg">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -59,6 +60,7 @@
         <button id="link">link</button>
         <button id="programm">programm</button>
         <button id="contacts">contacts</button>
+        <button id="chat">Telegram chat</button>
     </div>
 
     <div id="sch">
@@ -85,6 +87,7 @@
         <img src="images/fhfhfh.jpeg">
         <img src="images/fhfhfh.jpeg">
         <button class="back">Back</button>
+        <button id="map">Map</button>
     </div>
 
     <div id="pr">
@@ -132,6 +135,14 @@
         let programmText = document.getElementById("programmText");
         if (programmText.textContent.length > 1000) {
             programmText.textContent = programmText.textContent.substring(0, 1000) + '...';
+        }
+        // CHECK IF USER REGISTERED FIRST TIME__________________
+        if (!localStorage.getItem('userRegistered')) {
+            // User has not registered, show the "first_reg" section
+            document.getElementById('first_reg').style.display = 'block';
+        } else {
+            // User has registered, show the "home" section
+            document.getElementById('home').style.display = 'block';
         }
     </script>
     
@@ -189,6 +200,8 @@
         let link = document.getElementById("link");
         let programm = document.getElementById("programm");
         let contacts = document.getElementById("contacts");
+        let chat = document.getElementById("chat");
+        let map = document.getElementById("map");
         let back = document.getElementById("back");
         tg.expand()
 
@@ -226,6 +239,14 @@
             document.getElementById("home").style.display = "none";
             document.getElementById("cts").style.display = "block";
         });
+
+        chat.addEventListener("click", () => {
+            window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
+        })
+
+        map.addEventListener("click", () => {
+            window.location.href = "https://www.google.com/maps/place/%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%B0,+%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+65000/@46.4598536,30.5469803,11z/data=!3m1!4b1!4m6!3m5!1s0x40c6318a0b864c43:0x129f8fe28cf2176c!8m2!3d46.4702111!4d30.7306393!16zL20vMGZmbXA?entry=ttu";
+        })
 
 
 
