--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         //         "tel":tel,
         //     }
 
-        //     // tg.sendData(JSON.stringify(data));
+            tg.sendData(JSON.stringify(data));
            
             document.getElementById("first_reg").style.display = "none";
             document.getElementById("home").style.display = "block";
