--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
 
             tg.sendData(JSON.stringify(data));
            
-            document.getElementById("first_reg").style.display = "none";
-            document.getElementById("home").style.display = "block";
+            // document.getElementById("first_reg").style.display = "none";
+            // document.getElementById("home").style.display = "block";
         })
     </script>
 
