--- a/index.html
+++ b/index.html
@@ -178,12 +178,12 @@
 
         //     if (!validateTel(tel)) {
 
-                    //     let data = {
-        //         "name":name,
-        //         "last name": last_name,
-        //         "email":email,
-        //         "tel":tel,
-        //     }
+            let data = {
+                "name":name,
+                "last name": last_name,
+                "email":email,
+                "tel":tel,
+            }
 
             tg.sendData(JSON.stringify(data));
            
