--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         reg.addEventListener("click", () => {
             tg.sendData(JSON.stringify(data));
-            window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
+            // window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
         })
     </script>
 
