--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             }
             
             tg.sendData(JSON.stringify(data));
-            // window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
+            window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
         })
     </script>
 
