--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <input type="text" id="lastname" placeholder="Last Name" >
             <input type="text" id="email" placeholder="e-mail@gmail.com" >
             <input type="text" id="tel" placeholder="Tel no (+380_____)" >
-            <!-- <input type="text" id="city" placeholder="City" > -->
-            <!-- <input type="text" id="school" placeholder="school" >
-            <input type="text" id="position" placeholder="position"> -->
+            <input type="text" id="city" placeholder="City" >
+            <input type="text" id="school" placeholder="school" >
+            <input type="text" id="position" placeholder="position">
             <button id="register">Register</button>
         </form>
     </div>
