--- a/index.html
+++ b/index.html
@@ -52,13 +52,14 @@
     
             try {
                 // Make an HTTP POST request to your server
-                let response = await fetch('/submit_registration', {
+                let response = await fetch('http://127.0.0.1:3000/submit_registration', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
                     body: JSON.stringify(data),
                 });
+
     
                 if (response.ok) {
                     // Server successfully processed the request
