--- a/home.html
+++ b/home.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Main page</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="home">
@@ -12,13 +13,71 @@
             <img src="images/huyatina.jpg" alt="Huyatina Image">
         </div>
         <h1>Home Page</h1>
-        <button id="register">Register</button>
-        <button id="register">Register</button>
-        <button id="register">Register</button>
-        <button id="register">Register</button>
-        <button id="register">Register</button>
-        <button id="register">Register</button>
-        <button id="register">Register</button>
+        <button id="register2">Register</button>
+        <button id="schedule">schedule</button>
+        <button id="route">route</button>
+        <button id="presentation">presentation</button>
+        <button id="link">link</button>
+        <button id="programm">programm</button>
+        <button id="contacts">contacts</button>
+        <button id="chat">Telegram chat</button>
     </div>
+
+    <script>
+        let reg2 = document.getElementById("register2");
+        let schedule = document.getElementById("schedule");
+        let route = document.getElementById("route");
+        let presentation = document.getElementById("presentation");
+        let link = document.getElementById("link");
+        let programm = document.getElementById("programm");
+        let contacts = document.getElementById("contacts");
+        let chat = document.getElementById("chat");
+        let map = document.getElementById("map");
+        let back = document.getElementById("back");
+        tg.expand()
+
+
+        reg2.addEventListener("click", () => {
+            document.getElementById("home").style.display = "none";
+            document.getElementById("reg2").style.display = "block";
+        });
+        
+        schedule.addEventListener("click", () => {
+            document.getElementById("home").style.display = "none";
+            document.getElementById("sch").style.display = "block";
+        });
+
+        route.addEventListener("click", () => {
+            document.getElementById("home").style.display = "none";
+            document.getElementById("rt").style.display = "block";
+        });
+
+        presentation.addEventListener("click", () => {
+            document.getElementById("home").style.display = "none";
+            document.getElementById("pr").style.display = "block";
+        });
+
+        link.addEventListener("click", () => {
+            window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
+        })
+
+        programm.addEventListener("click", () => {
+            document.getElementById("home").style.display = "none";
+            document.getElementById("pgm").style.display = "block";
+        });
+
+        contacts.addEventListener("click", () => {
+            document.getElementById("home").style.display = "none";
+            document.getElementById("cts").style.display = "block";
+        });
+
+        chat.addEventListener("click", () => {
+            window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
+        })
+
+        map.addEventListener("click", () => {
+            window.location.href = "https://www.google.com/maps/place/%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%B0,+%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+65000/@46.4598536,30.5469803,11z/data=!3m1!4b1!4m6!3m5!1s0x40c6318a0b864c43:0x129f8fe28cf2176c!8m2!3d46.4702111!4d30.7306393!16zL20vMGZmbXA?entry=ttu";
+        })
+    </script>
 </body>
 </html>
