--- a/home.html
+++ b/home.html
@@ -14,12 +14,12 @@
         </div>
         <h1>Home Page</h1>
         <button id="register2">Register</button>
-        <button id="schedule">schedule</button>
-        <button id="route">route</button>
-        <button id="presentation">presentation</button>
-        <button id="link">link</button>
-        <button id="programm">programm</button>
-        <button id="contacts">contacts</button>
+        <button id="schedule">Schedule</button>
+        <button id="route">Route</button>
+        <button id="presentation">Presentation</button>
+        <button id="link">Link</button>
+        <button id="programm">Programm</button>
+        <button id="contacts">Contacts</button>
         <button id="chat">Telegram chat</button>
     </div>
 
