--- a/home.html
+++ b/home.html
@@ -38,13 +38,11 @@
 
 
         reg2.addEventListener("click", () => {
-            document.getElementById("home").style.display = "none";
-            document.getElementById("reg2").style.display = "block";
+            window.location.href = "https://carrion626.github.io/carrion626.github.io/home.html";
         });
         
         schedule.addEventListener("click", () => {
-            document.getElementById("home").style.display = "none";
-            document.getElementById("sch").style.display = "block";
+            window.location.href = "https://carrion626.github.io/carrion626.github.io/schedule.html";
         });
 
         route.addEventListener("click", () => {
