--- a/home.html
+++ b/home.html
@@ -46,13 +46,11 @@
         });
 
         route.addEventListener("click", () => {
-            document.getElementById("home").style.display = "none";
-            document.getElementById("rt").style.display = "block";
+            window.location.href = "https://carrion626.github.io/carrion626.github.io/route.html";
         });
 
         presentation.addEventListener("click", () => {
-            document.getElementById("home").style.display = "none";
-            document.getElementById("pr").style.display = "block";
+            window.location.href = "https://carrion626.github.io/carrion626.github.io/presentation.html";
         });
 
         link.addEventListener("click", () => {
