--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     console.log(responseData);
 
                     // Redirect or perform other actions based on the response
-                    window.location.href = "https://carrion626.github.io/carrion626.github.io/home.html";
+                    window.location.href = "https://carrion626.github.io/home.html";
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
