--- a/reg2.html
+++ b/reg2.html
@@ -33,8 +33,8 @@
         let back = document.getElementById("back");
 
         back.addEventListener("click", async (event) => {
-            window.location.href = "https://carrion626.github.io/carrion626.github.io/home.html";
-        })
+            window.location.href = "https://carrion626.github.io/home.html";
+                })
     
         reg.addEventListener("click", async (event) => {
             // Prevent the default form submission behavior
@@ -75,7 +75,7 @@
                     console.log(responseData);
 
                     // Redirect or perform other actions based on the response
-                    window.location.href = "https://carrion626.github.io/carrion626.github.io/home.html";
+                    window.location.href = "https://carrion626.github.io/home.html";
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
