--- a/home.html
+++ b/home.html
@@ -38,19 +38,19 @@
 
 
         reg2.addEventListener("click", () => {
-            window.location.href = "https://carrion626.github.io/carrion626.github.io/home.html";
+            window.location.href = "https://carrion626.github.io/reg2.html";
         });
         
         schedule.addEventListener("click", () => {
-            window.location.href = "https://carrion626.github.io/carrion626.github.io/schedule.html";
+            window.location.href = "https://carrion626.github.io/schedule.html";
         });
 
         route.addEventListener("click", () => {
-            window.location.href = "https://carrion626.github.io/carrion626.github.io/route.html";
+            window.location.href = "https://carrion626.github.io/route.html";
         });
 
         presentation.addEventListener("click", () => {
-            window.location.href = "https://carrion626.github.io/carrion626.github.io/presentation.html";
+            window.location.href = "https://carrion626.github.io/presentation.html";
         });
 
         link.addEventListener("click", () => {
