--- a/route.html
+++ b/route.html
@@ -10,18 +10,18 @@
 </head>
 <body>
 
-    <div id="sch">
+    <div id="rt">
         <div class="image-frame">
             <img src="images/33212.jpg" alt="Huyatina Image">
         </div>
-        <h1>schedule</h1>
-        <img src="images/ысрувгду.jpg">
-        <img src="images/ысрувгду.jpg">
-        <img src="images/ысрувгду.jpg">
-        <img src="images/ысрувгду.jpg">
-        <img src="images/ысрувгду.jpg">
-        <button id="map">Map</button>
+        <h1>Route</h1>
+        <img src="images/fhfhfh.jpeg">
+        <img src="images/fhfhfh.jpeg">
+        <img src="images/fhfhfh.jpeg">        
+        <img src="images/fhfhfh.jpeg">
+        <img src="images/fhfhfh.jpeg">
         <button id="back">Back</button>
+        <button id="map">Map</button>
     </div>
 
     <script>
@@ -29,7 +29,7 @@
         let map = document.getElementById("map");
 
         back.addEventListener("click", async (event) => {
-            window.location.href = "https://carrion626.github.io/carrion626.github.io/home.html";
+            window.location.href = "https://carrion626.github.io/home.html";
         })
 
         map.addEventListener("click", async (event) => {
