--- a/schedule.html
+++ b/schedule.html
@@ -26,7 +26,7 @@
     <script>
         let back = document.getElementById("back");
         back.addEventListener("click", async (event) => {
-            window.location.href = "https://carrion626.github.io/carrion626.github.io/home.html";
+            window.location.href = "https://carrion626.github.io/home.html";
         })
     </script>
 
