--- a/reg2.html
+++ b/reg2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div id="first_reg">
+    <div id="second_reg">
         <div class="image-frame">
             <img src="images/huyatina.jpg" alt="Huyatina Image">
         </div>
