--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="images/fhfhfh.jpeg">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -14,7 +13,7 @@
         <div class="image-frame">
             <img src="images/33212.jpg" alt="Huyatina Image">
         </div>
-        <h1>schedule</h1>
+        <h1>Schedule</h1>
         <img src="images/ысрувгду.jpg">
         <img src="images/ысрувгду.jpg">
         <img src="images/ысрувгду.jpg">
