--- a/home.html
+++ b/home.html
@@ -59,22 +59,17 @@
         })
 
         programm.addEventListener("click", () => {
-            document.getElementById("home").style.display = "none";
-            document.getElementById("pgm").style.display = "block";
+            window.location.href = "https://carrion626.github.io/programm.html";
         });
 
         contacts.addEventListener("click", () => {
-            document.getElementById("home").style.display = "none";
-            document.getElementById("cts").style.display = "block";
+            window.location.href = "https://carrion626.github.io/contacts.html";
         });
 
         chat.addEventListener("click", () => {
             window.location.href = "https://miro.com/app/board/uXjVN4lad2k=/";
         })
 
-        map.addEventListener("click", () => {
-            window.location.href = "https://www.google.com/maps/place/%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%B0,+%D0%9E%D0%B4%D0%B5%D1%81%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+65000/@46.4598536,30.5469803,11z/data=!3m1!4b1!4m6!3m5!1s0x40c6318a0b864c43:0x129f8fe28cf2176c!8m2!3d46.4702111!4d30.7306393!16zL20vMGZmbXA?entry=ttu";
-        })
     </script>
 </body>
 </html>
