--- a/presentation.html
+++ b/presentation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="images/fhfhfh.jpeg">
-    <title>Route page</title>
+    <title>Presentation page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
         <div class="image-frame">
             <img src="images/33212.jpg" alt="Huyatina Image">
         </div>
-        <h1>Route</h1>
+        <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
         <button class="speaker">Dolboeb</button>
         <button class="speaker">Daun</button>
