--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
 
-    <div id="first_reg">
+    <div id="preview">
+        <img id="image" src="images/huyatina.jpg" style="display: block; max-width: calc(100vw - 40px); max-height: calc(100vh - 40px); margin: auto; padding: 20px;">
+        <button id="next">Next -></button>
+    </div>
+
+
+
+    <div id="first_reg" style="display: none;">
         <div class="image-frame">
             <img src="images/huyatina.jpg" alt="Huyatina Image">
         </div>
@@ -26,6 +33,30 @@
             <button id="register">Register</button>
         </form>
     </div>
+
+    <script>
+        const images = ['huyatina.jpg', 'fhfhfh.jpeg', '33212.jpg', 'ысрувгду.jpg', 'huyatina.jpg'];
+        let currentIndex = 0;
+
+        const image = document.getElementById('image');
+        const previewDiv = document.getElementById('preview');
+        const firstRegDiv = document.getElementById('first_reg');
+        const nextButton = document.getElementById('next');
+
+        nextButton.addEventListener('click', () => {
+            // Update the index for the next image
+            currentIndex = (currentIndex + 1) % images.length;
+            
+            if (currentIndex === 0) {
+                // If the end is reached, hide "preview" and show "first_reg"
+                previewDiv.style.display = 'none';
+                firstRegDiv.style.display = 'block';
+            } else {
+                // Set the 'src' attribute to the next image
+                image.src = 'images/' + images[currentIndex];
+            }
+        });
+    </script>
 
     <script>
         let reg = document.getElementById("register");
