--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
         let reg = document.getElementById("register");
     
         reg.addEventListener("click", async (event) => {
-
+            // Prevent the default form submission behavior
+            event.preventDefault();
 
             // Get input values
             let name = document.getElementById("name").value;
