--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         const previewDiv = document.getElementById('preview');
         const firstRegDiv = document.getElementById('first_reg');
         const nextButton = document.getElementById('next');
+        const registerButton = document.getElementById('register');
 
         nextButton.addEventListener('click', () => {
             // Update the index for the next image
