--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <script>
         let reg = document.getElementById("register");
     
-        reg.addEventListener("touchend", async (event) => {
+        reg.addEventListener("submit", async (event) => {
             // Prevent the default form submission behavior
             event.preventDefault();
 
