--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     console.log(responseData);
 
                     // Redirect or perform other actions based on the response
-                    window.location.href = 'tg://openurl?url=https://carrion626.github.io/home.html';
+                    window.location.href = 'https://carrion626.github.io/home.html';
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
