--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <script>
         let reg = document.getElementById("register");
     
-        reg.addEventListener("submit", async (event) => {
+        reg.addEventListener("click", async (event) => {
             // Prevent the default form submission behavior
             event.preventDefault();
 
@@ -113,7 +113,7 @@
                     console.log(responseData);
 
                     // Redirect or perform other actions based on the response
-                    window.location.href = 'https://carrion626.github.io/home.html';
+                    window.location.href = 'tg://openurl?url=https://carrion626.github.io/home.html';
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
