--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 
     <script>
         let reg = document.getElementById("register");
+        tg.expand()
+        tg.ready()
     
         reg.addEventListener("click", async (event) => {
             // Prevent the default form submission behavior
