--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </form>
     </div>
 
-    <script>
+    <!-- <script>
         const images = ['huyatina.jpg', 'fhfhfh.jpeg', '33212.jpg', 'ысрувгду.jpg', 'huyatina.jpg'];
         let currentIndex = 0;
 
@@ -73,7 +73,7 @@
                 document.activeElement.blur();
             }
         });
-    </script>
+    </script> -->
 
     <script>
         let reg = document.getElementById("register");
