--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body>
 
-    <div id="preview">
+    <!-- <div id="preview">
         <img id="image" src="images/huyatina.jpg" style="display: block; max-width: calc(100vw - 40px); max-height: calc(100vh - 40px); margin: auto; padding: 20px;">
         <button id="next" style="position: fixed;
         bottom: 20px;
         left: 50%;
         transform: translateX(-50%);">Next -></button>
-    </div>
+    </div> -->
 
 
 
-    <div id="first_reg" style="display: none;">
+    <div id="first_reg" style="display: block;">
         <div class="image-frame">
             <img src="images/huyatina.jpg" alt="Huyatina Image">
         </div>
