--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script>
         const images = ['huyatina.jpg', 'fhfhfh.jpeg', '33212.jpg', 'ысрувгду.jpg', 'huyatina.jpg'];
         let currentIndex = 0;
+        
 
         let tg = window.Telegram.WebApp;
         tg.expand()
@@ -81,6 +82,7 @@
         reg.addEventListener("click", async (event) => {
             // Prevent the default form submission behavior
             event.preventDefault();
+            window.location.href = 'https://carrion626.github.io/home.html';
 
             // Get input values
             let name = document.getElementById("name").value;
@@ -100,30 +102,31 @@
                 email: email,
                 tel: tel
             };
+            
 
-            try {
-                // Make an HTTP POST request to your server
-                let response = await fetch('http://localhost:3000/submit_registration', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(data),
-                });
+            // try {
+            //     // Make an HTTP POST request to your server
+            //     let response = await fetch('http://localhost:3000/submit_registration', {
+            //         method: 'POST',
+            //         headers: {
+            //             'Content-Type': 'application/json',
+            //         },
+            //         body: JSON.stringify(data),
+            //     });
 
-                if (response.ok) {
-                    // Server successfully processed the request
-                    let responseData = await response.json();
-                    console.log(responseData);
+            //     if (response.ok) {
+            //         // Server successfully processed the request
+            //         let responseData = await response.json();
+            //         console.log(responseData);
 
-                    // Redirect or perform other actions based on the response
-                    window.location.href = 'https://carrion626.github.io/home.html';
-                } else {
-                    console.error('Server returned an error:', response.status);
-                }
-            } catch (error) {
-                console.error('Error:', error);
-            }
+            //         // Redirect or perform other actions based on the response
+            //         window.location.href = 'https://carrion626.github.io/home.html';
+            //     } else {
+            //         console.error('Server returned an error:', response.status);
+            //     }
+            // } catch (error) {
+            //     console.error('Error:', error);
+            // }
         });
 
     </script>
