--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             try {
                 // Make an HTTP POST request to your server
-                let response = await fetch('http://localhost:3000/submit_registration', {
+                let response = await fetch('https://ec75-2a02-ff0-220-b795-6520-8a64-e83-392f.ngrok-free.app/submit_registration', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
