--- a/reg2.html
+++ b/reg2.html
@@ -32,6 +32,17 @@
     </div>
 
     <script>
+        const registerButton = document.getElementById('register');
+
+        document.body.addEventListener('click', (event) => {
+            const clickedElement = event.target;
+
+            if (clickedElement.tagName !== 'INPUT' && clickedElement !== registerButton) {
+                document.activeElement.blur();
+            }
+        });
+
+
         let reg = document.getElementById("register");
         let back = document.getElementById("back");
 
@@ -64,7 +75,7 @@
 
             try {
                 // Make an HTTP POST request to your server
-                let response = await fetch('http://localhost:3000/submit_registration', {
+                let response = await fetch('https://ec75-2a02-ff0-220-b795-6520-8a64-e83-392f.ngrok-free.app/submit_registration', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -78,7 +89,7 @@
                     console.log(responseData);
 
                     // Redirect or perform other actions based on the response
-                    window.location.href = "https://carrion626.github.io/home.html";
+                    window.location.href = 'https://carrion626.github.io/home.html';
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
