zoom in pictures

--- a/schedule.html
+++ b/schedule.html
@@ -17,11 +17,11 @@
             <img src="images/33212.jpg" alt="Huyatina Image">
         </div>
         <h1>Schedule</h1>
-        <img src="images/ысрувгду.jpg">
-        <img src="images/ысрувгду.jpg">
-        <img src="images/ысрувгду.jpg">
-        <img src="images/ысрувгду.jpg">
-        <img src="images/ысрувгду.jpg">
+        <img src="images/ысрувгду.jpg" class="zoomable-image">
+        <img src="images/ысрувгду.jpg" class="zoomable-image">
+        <img src="images/ысрувгду.jpg" class="zoomable-image">
+        <img src="images/ысрувгду.jpg" class="zoomable-image">
+        <img src="images/ысрувгду.jpg" class="zoomable-image">
         <button id="back">Back</button>
     </div>
 
