--- a/programm.html
+++ b/programm.html
@@ -18,11 +18,11 @@
         </div>
         <h1>Programm</h1>
         <p id="programmText">Some text up to 1000 chars</p>
-        <img src="images/fhfhfh.jpeg">
-        <img src="images/fhfhfh.jpeg">
-        <img src="images/fhfhfh.jpeg">        
-        <img src="images/fhfhfh.jpeg">
-        <img src="images/fhfhfh.jpeg">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">        
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">
         
         <button id="back">Back</button>
     </div>
