--- a/route.html
+++ b/route.html
@@ -17,11 +17,11 @@
             <img src="images/33212.jpg" alt="Huyatina Image">
         </div>
         <h1>Route</h1>
-        <img src="images/fhfhfh.jpeg">
-        <img src="images/fhfhfh.jpeg">
-        <img src="images/fhfhfh.jpeg">        
-        <img src="images/fhfhfh.jpeg">
-        <img src="images/fhfhfh.jpeg">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">        
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image">
         <button id="back">Back</button>
         <button id="map">Map</button>
     </div>
