--- a/schedule.html
+++ b/schedule.html
@@ -9,7 +9,7 @@
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://unpkg.com/medium-zoom/dist/medium-zoom.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/medium-zoom@1.1.0/dist/medium-zoom.css">
 </head>
 <body>
 
