--- a/schedule.html
+++ b/schedule.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="./node_modules/hammerjs/hammer.min.js"></script>
+    <script src="hammer.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
