--- a/schedule.html
+++ b/schedule.html
@@ -8,7 +8,9 @@
     <meta name="format-detection" content="telephone=no">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="hammer.min.js"></script>
+    <script src="C:\Users\budei\OneDrive\Documents\GitHub\carrion626.github.io\node_modules\hammer.min.js"></script>
+    <script src="C:\Users\budei\OneDrive\Documents\GitHub\carrion626.github.io\node_modules\medium-zoom.js"></script>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
