--- a/schedule.html
+++ b/schedule.html
@@ -8,8 +8,9 @@
     <meta name="format-detection" content="telephone=no">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="C:\Users\budei\OneDrive\Documents\GitHub\carrion626.github.io\node_modules\hammer.min.js"></script>
-    <script src="C:\Users\budei\OneDrive\Documents\GitHub\carrion626.github.io\node_modules\medium-zoom.js"></script>
+        <!-- Adjust the paths based on your project structure -->
+    <script src="./node_modules/hammerjs/hammer.min.js"></script>
+    <script src="./node_modules/medium-zoom/dist/medium-zoom.js"></script>
 
     <link rel="stylesheet" href="style.css">
 </head>
