--- a/schedule.html
+++ b/schedule.html
@@ -8,9 +8,10 @@
     <meta name="format-detection" content="telephone=no">
     <title>Main page</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-        <!-- Adjust the paths based on your project structure -->
-    <script src="./node_modules/hammerjs/hammer.min.js"></script>
-    <script src="./node_modules/medium-zoom/dist/medium-zoom.js"></script>
+    <!-- Include scripts using CDN links -->
+    <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8/hammer.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.1.0/dist/medium-zoom.js"></script>
+
 
     <link rel="stylesheet" href="style.css">
 </head>
